fixed bug with scrollbar on tg webapp

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,11 @@
   --nav-height: 56px;
 }
 
+html {
+  height: 100%;
+  overflow: hidden; /* Hide scrollbars */
+}
+
 body {
   margin: 0;
   min-width: 350px;
